# voxely_voxelchuck

./: Cargo.toml  README.md
src/: components.rs  main.rs
src/assets/: grass.vox.xraw  grass_dirt_corner.vox.xraw  tiles2d.im256
src/systems/: mod.rs
src/systems/logic/: mod.rs  player_systems.rs
src/systems/rendering/: mod.rs  voxels.rs
src/utils/: loaders.rs  mod.rs  ray_queries.rs  rendering.rs
src/voxel_model/: mod.rs
